--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.sass
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.sass
@@ -26,14 +26,11 @@
     height: 162px
 
 /* ## Unten Links ## */
-.fmTitle
-    font-size: 20px
+.fmTitle p
+    font-size: 15px
     padding-bottom: 10px
     padding-top: 10px
-    padding-left: 40px
-
-.fmContent
-    padding-left: 40px
+    font-weight: bold
 
 .rowOne,
 .rowTwo
@@ -42,14 +39,19 @@
 
 .fmAktuell,
 .fmOne,
-.fmTwo,
-.fmThree
+.fmTwo
     border-bottom: 1px solid $formFontColor
     
-
 .fmOne,
 .fmThree
     background: $tableColor
+    margin-left: 40px
+    margin-right: 10px
+
+.fmAktuell,
+.fmTwo
+    margin-left: 40px
+    margin-right: 10px
 
 /* ## Unten Rechts ## */
 .letzteVorgaenge
@@ -71,6 +73,8 @@
 .letzteVorgaenge th
     border-bottom: 1px solid $formFontColor
     padding-bottom: 5px
+    font-size: 15px
+    font-weight: bold
 
 .letzteVorgaenge td
     padding-top: 2px
