--- a/src/app/_hauptKomponente/g-kunden/g-kunden.component.html
+++ b/src/app/_hauptKomponente/g-kunden/g-kunden.component.html
@@ -2,5 +2,205 @@
 <app-b-sidebar></app-b-sidebar>
 <div class="oneWindow">
     <div class="one window">
+        <div class="windowTitle windowHeader">
+            <p>Kunden</p>
+            <div class="searchBarSmall">
+                <input type="text" id="searchBarSmall" placeholder="SEARCH">
+                <a href="#"><img [src]="search" alt=""></a>
+            </div>
+            <div class="btnErfassen">
+                <button type="button" class="btnErfassen">Datei Erfassen</button>
+            </div>
+        </div>
+        <div class="windowTable">
+            <table>
+                <tr>
+                    <th>Nummer</th>
+                    <th>Kunde</th>
+                    <th>Ortschaft</th>
+                    <th>Adresse</th>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+                <tr>
+                    <td>KU 40-001</td>
+                    <td>Thomas Brändle</td>
+                    <td>Ganterschwil</td>
+                    <td>Friedaustrasse 3</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
