--- a/src/app/_hauptKomponente/i-artikel/i-artikel.component.html
+++ b/src/app/_hauptKomponente/i-artikel/i-artikel.component.html
@@ -2,5 +2,236 @@
 <app-b-sidebar></app-b-sidebar>
 <div class="oneWindow">
     <div class="one window">
+        <div class="windowTitle windowHeader">
+            <p>Artikel</p>
+            <div class="searchBarSmall">
+                <input type="text" id="searchBarSmall" placeholder="SEARCH">
+                <a href="#"><img [src]="search" alt=""></a>
+            </div>
+            <div class="btnErfassen">
+                <button type="button" class="btnErfassen">Datei Erfassen</button>
+            </div>
+        </div>
+        <div class="windowTable">
+            <table>
+                <tr>
+                    <th>Nummer</th>
+                    <th>Bezeichnung</th>
+                    <th>Gruppe</th>
+                    <th>Einzelpreis</th>
+                    <th>Einheit</th>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+                <tr>
+                    <td>AR 60-001</td>
+                    <td>Landingpage</td>
+                    <td>60 - Webentwicklung</td>
+                    <td>150.00.-</td>
+                    <td>Pauschal</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
