--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
@@ -2,9 +2,256 @@
 <app-b-sidebar></app-b-sidebar>
 <div class="twoWindow">
     <div class="oben window">
+        <div class="windowTitle windowHeader">
+            <p>Unternehmensdaten</p>
+            <a href="" class="metaIcon"><img [src]="meta" alt="">
+            </a>
+        </div>
+        <div class="windowContent">
+            <div class="split firstSplit">
+                <div class="row">
+                    <p>Name:</p>
+                    <p>Thomas Brändle</p>
+                </div>
+                <div class="row">
+                    <p>Adresse:</p>
+                    <p>
+                        Friedaustrasse 3
+                        <br /> 9608 Ganterschwil
+                        <br /> CH - Schweiz
+                    </p>
+                </div>
+                <div class="row">
+                    <p>Telefon:</p>
+                    <p>+41 79 520 65 11</p>
+                </div>
+                <div class="row">
+                    <p>E-Mail:</p>
+                    <p>design@thomas-braendle.com</p>
+                </div>
+                <div class="row">
+                    <p>Website:</p>
+                    <p>www.thomas-braendle.com</p>
+                </div>
+            </div>
+            <div class="split secondSplit">
+                <div class="btnUnternehmen">
+                    <p>Einstellungen</p>
+                </div>
+                <div class="btnUnternehmen">
+                    <p>Jahresabschluss</p>
+                </div>
+                <div class="btnUnternehmen">
+                    <p>Statistiken</p>
+                </div>
+            </div>
+            <div class="split thirdSplit">
+                <div class="logoUnternehmen">
+                    <img [src]="logoUnternehmen" alt="">
+                </div>
+                <div class="btnUnternehmen">
+                    <p>Logo ändern</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="unten window">
+        <div class="windowTitle windowHeader">
+            <p>Mitarbeiter</p>
+            <div class="searchBarSmall">
+                <input type="text" id="searchBarSmall" placeholder="SEARCH">
+                <a href="#"><img [src]="search" alt=""></a>
+            </div>
+            <div class="btnErfassen">
+                <button type="button" class="btnErfassen">Datei Erfassen</button>
+            </div>
+        </div>
+        <div class="windowTable">
+            <table>
+                <tr>
+                    <th>Nummer</th>
+                    <th>Name</th>
+                    <th>Vorname</th>
+                    <th>Funktion</th>
+                    <th>Abteilung</th>
+                    <th>Stellenprozent</th>
+                    <th>Administrator</th>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+                <tr>
+                    <td>MA 100-001</td>
+                    <td>Brändle</td>
+                    <td>Thomas</td>
+                    <td>Geschäftsführer</td>
+                    <td>Geschäftsleitung</td>
+                    <td>100%</td>
+                    <td>Ja</td>
+                </tr>
+
+            </table>
+        </div>
     </div>
 </div>
 
