--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.html
@@ -2,5 +2,55 @@
 <app-b-sidebar></app-b-sidebar>
 <div class="oneWindow">
     <div class="one window">
+        <div class="windowTitle windowHeader">
+            <p>Einstellungen</p>
+        </div>
+        <div class="split firstSplit">
+            <div class="row">
+                <p class="unterTitel">Darstellung</p>
+                <p class="name">Schriftart Überschriften</p>
+                <select name="fontHeadline" id="">
+                    <option value="test">Segoe Print</option>
+                    <option value="test">Arial</option>
+                    <option value="test">Roboto</option>
+                    <option value="test">Test</option>
+                    <option value="test">Test</option>
+                </select>
+                <p class="name">Schriftart Lauftext</p>
+                <select name="fontText" id="">
+                    <option value="test">Roboto</option>
+                    <option value="test">Arial</option>
+                    <option value="test">Segoe Print</option>
+                    <option value="test">Test</option>
+                    <option value="test">Test</option>
+                </select>
+                <p class="name">Ansicht Modus</p>
+                <select name="viewMode" id="">
+                    <option value="test">Original</option>
+                    <option value="test">Dark</option>
+                </select>
+            </div>
+        </div>
+        <div class="split secondSplit">
+        </div>
+        <div class="split thirdSplit">
+            <div class="row">
+                <p class="unterTitel">Softwareinfos</p>
+                <p class="name">Version:</p>
+                <p class="value">V 1.0.0-0002</p>
+                <p class="name">Datum:</p>
+                <p class="value">16.10.2022</p>
+                <p class="name">Hersteller:</p>
+                <p class="value">Goffini GmbH</p>
+                <p class="name">Support:</p>
+                <p class="value">
+                    +41 79 520 65 11
+                    <br /> info@goffini.ch
+                </p>
+            </div>
+        </div>
+        <div class="speichern">
+            <p>Änderungen speichern</p>
+        </div>
     </div>
 </div>
