--- a/src/app/_subKomponente/a-header/a-header.component.sass
+++ b/src/app/_subKomponente/a-header/a-header.component.sass
@@ -61,20 +61,24 @@
     margin-right: 20px
 
 .menuPunkt
+    background-color: white
+    cursor: pointer
+    display: inline-block
+    border: 1px solid transparent
+    border-radius: 20px
+
+.profil a
+    display: flex
+    justify-content: center
+    align-items: center
     height: 64px
     width: 64px
     border: 1px solid $borderColor
     border-radius: 20px
-    display: flex
-    justify-content: center
-    align-items: center
-    background-color: white
-    cursor: pointer
 
 .profil img
     float: right
     height: 42px
-    background-color: white
 
 .profilGruss
     float: left
