--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.sass
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.sass
@@ -1,5 +1,67 @@
 @import './src/sass/var'
 @import './src/sass/window'
 
-    
+/* ## Unternehmensseite ## */
+
+/* Kopfdaten */
+.split
+    display: inline-block
+    width: 32%
+    margin-top: 10px
+    vertical-align: top
+
+.firstSplit,
+.secondSplit
+    margin-right: 10px
+
+.thirdSplit
+    margin-left: 10px
+
+.row p
+    display: inline-block
+    padding: 2px
+    vertical-align: top
+
+.firstSplit p:nth-child(1)
+    width: 30%
+
+.firstSplit p:nth-child(2)
+    width: 65%
+    background-color: $tableColor
+    border: 1px solid transparent
+    border-radius: 5px
+    margin-top: 5px
+    margin-bottom: 5px
+    padding-left: 5px
+
+.btnUnternehmen
+    height: 34px 
+
+.btnUnternehmen p
+    width: 100%
+    background-color: $tableColor
+    border: 1px solid $borderColor
+    border-radius: 5px
+    text-align: center
+    padding: 2px
+    margin-bottom: 5px
+    cursor: pointer
+
+.secondSplit div:nth-child(3),
+.thirdSplit div:nth-child(2)
+    margin-bottom: -5px
+
+.logoUnternehmen
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-bottom: 20px
+
+.logoUnternehmen img
+    height: 150px
+
+/* Mitarbeiter */
+.btnErfassen button
+    background-color: $tableColor
+
     
