--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
@@ -1,3 +1,53 @@
 @import './src/sass/var'
 @import './src/sass/window'
+
+/* ## Unternehmensseite ## */
+
+/* Einteilung */
+.split
+    display: inline-block
+    width: 32%
+    margin-top: 10px
+    vertical-align: top
+
+.firstSplit
+    margin-left: 40px
+
+.row p
+    display: block
+    padding: 2px
+
+.unterTitel
+    font-size: 20px
+
+.value
+    width: 100%
+    background-color: $tableColor
+    border-radius: 5px
+    margin-top: 5px
+    margin-bottom: 5px
+    padding-left: 5px
+
+/* DropDown */
+.row select
+    width: 100%
+    height: 30px
+    border: 1px solid $borderColor
+    border-radius: 5px
+    cursor: pointer
+    outline: none
     
+.speichern
+    width: 100%
+    text-align: center
+
+.speichern p
+    width: 33%
+    position: absolute
+    right: 0
+    bottom: 10px
+    border: 1px solid $borderColor
+    border-radius: 5px
+    padding-top: 5px
+    padding-bottom: 5px
+    cursor: pointer
