--- a/src/app/_subKomponente/a-header/a-header.component.html
+++ b/src/app/_subKomponente/a-header/a-header.component.html
@@ -9,11 +9,11 @@
         </div>
         <div class="profil">
             <p class="profilGruss">Hi Thomas Brändle</p>
-            <a href="profil" class="menuPunkt">
-                <div class="menuPunkt">
+            <div class="menuPunkt">
+                <a routerLink="/profil" routerLinkActive="active">
                     <img [src]="profil" alt="">
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </div>
     <div class="headerText">
