--- a/src/styles.sass
+++ b/src/styles.sass
@@ -50,7 +50,24 @@ h2, h3, h4, h5, p, a, label
 
 /* Scrollbar */
 ::-webkit-scrollbar 
-    display: none
+    width: 10px
+    height: 0px
     
-.is-acitve
-    background-color: $primaryColor
+::-webkit-scrollbar-track-piece:end 
+    background: transparent
+    margin-bottom: 30px
+
+::-webkit-scrollbar-track-piece:start
+    background: transparent
+    margin-top: 30px
+
+::-webkit-scrollbar-thumb:hover 
+  background: $tableColor
+
+::-webkit-scrollbar-track 
+    max-height: 50%
+    height: 50%
+
+/* Aktive Menupunkte */
+.active 
+    background-color: $primaryColor !important
