--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
@@ -118,7 +118,7 @@
         <div class="windowTitle">
             <p>Letzte Vorgänge</p>
         </div>
-        <div class="letzteVorgaenge">
+        <div class="windowTable">
             <table>
                 <tr>
                     <th>Belegart</th>
