--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
@@ -1,3 +1,8 @@
 @import './src/sass/var'
 @import './src/sass/window'
     
+/* Komplette Seite */
+.scroll
+    height: auto
+    width: auto
+    overflow-y: scroll !important
