--- a/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
+++ b/src/app/_hauptKomponente/l-einstellungen/l-einstellungen.component.sass
@@ -26,7 +26,7 @@
     border-radius: 5px
     margin-top: 5px
     margin-bottom: 5px
-    padding-left: 5px
+    padding-left: 5px !important
 
 /* DropDown */
 .row select
